codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__actions__agents_custom_lifecycle_chords.snap
---
source: tui/src/app/agents_overview_actions_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\n48).replace(&test_path_display(\"/tmp/project\"), \"/tmp/project\")"
---
  Agent command center
  0 need input   0 working   1 ready
  ────────────────────────────────────────────
      Tasks
  /tmp/project  1
  › ○ Task














  ↑↓ navigate o resume enter open n new
  w new worktree f search g group: project
  r rename x stop f5 f8 hide f5 f6 archive
  f5 f7 delete ctrl+c quit
