codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__actions__archive_task_confirmation.snap
---
source: tui/src/app/agents_overview_actions_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Agent command center  Group: Project  g
   All 1   Needs you 0   Working 0   Ready 1   Inactive 0
  ────────────────────────────────────────────────────────────────────────────
      Tasks                                            Status         Updated
  /tmp/project  1
  › ○ Current task                                     Ready           2m ago


      Archive “Current task”?
      This stops any running work in this task and its child agents, then
      archives them. Their history can be restored from the resume picker.


    › 1. Cancel
      2. Archive task and child agents

      enter select · esc back






  ? help  esc back  ↑/↓ move  enter open  n new
