codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__actions__archiving_selects_the_next_displayed_task.snap
---
source: tui/src/app/agents_overview_actions_tests.rs
assertion_line: 301
expression: "selections.join(\"\\n\")"
---
› ○ Task 3
› ○ Other 2
› ○ Task 1
› ○ Task 4
