codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__actions__delete_task_confirmation.snap
---
source: tui/src/app/agents_overview_actions_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Agent command center  Group: Project  g
   All 1   Needs you 0   Working 0   Ready 1   Inactive 0
  ────────────────────────────────────────────────────────────────────────────
      Tasks                                            Status         Updated
  /tmp/project  1
  › ○ Current task                                     Ready           2m ago


      Permanently delete “Current task”?
      This stops any running work in this task and its child agents, then
      permanently deletes their history. This cannot be undone.


    › 1. Cancel
      2. Permanently delete task and child agents

      enter select · esc back






  ? help  esc back  ↑/↓ move  enter open  n new
