codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__actions__delete_task_failure.snap
---
source: tui/src/app/agents_overview_actions_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Could not delete task
  failed to delete session: thread/delete failed: no rollout found for thread
  id 00000000-0000-0000-0000-000000000001 (code -32600)
  Work may have stopped. Resume the task to continue, or retry the action.


› 1. Back to agents

  enter select · esc back
