codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__actions__hiding_tasks_keeps_selection_adjacent_in_display_order.snap
---
source: tui/src/app/agents_overview_actions_tests.rs
expression: "selections.join(\"\\n\")"
---
Project, filtered=false: › ○ Task 3
Project, filtered=false: › ○ Task 4
Project, filtered=false: › ○ Other 2
Project, filtered=false: › ○ Task 1
Project, filtered=true: › ○ Task 3
Project, filtered=true: › ○ Task 4
Project, filtered=true: › ○ Task 1
Status, filtered=false: › ○ Task 3
Status, filtered=false: › ○ Task 1
Status, filtered=false: › ○ Task 4
Status, filtered=false: › ○ Other 2
Status, filtered=true: › ○ Task 3
Status, filtered=true: › ○ Task 1
Status, filtered=true: › ○ Task 4
Model, filtered=false: › ○ Task 3
Model, filtered=false: › ○ Task 4
Model, filtered=false: › ○ Other 2
Model, filtered=false: › ○ Task 1
Model, filtered=true: › ○ Task 3
Model, filtered=true: › ○ Task 4
Model, filtered=true: › ○ Task 1
